--- a/index.html
+++ b/index.html
@@ -8,23 +8,19 @@
 <body>
 
 <div>
- <div class="so_promo_headline" data-sitename="nanitestsite2">
-	data-language="en" 
+ <div class="so_promo_headline" data-sitename="nanitestsite2", data-language="en" >
 </div>
 <script src="//embed.solidopinion.com/so_wl.js" async="async" data-auto-start="true" data-ph-submit-auto-position="true" data-ph-submit-auto-size="true"></script>
 <noscript>Please enable JavaScript to view the <a href="http://solidopinion.com/">comments powered by SolidOpinion.</a></noscript>
 </div>	
 
 <div class="so_comments" data-sitename="nanitestsite2"></div>
-<script src="//embed.solidopinion.com/so_wl.js" async="async" data-auto-start="true" ></script>
 <noscript>Please enable JavaScript to view the <a href="http://solidopinion.com/">comments powered by SolidOpinion.</a></noscript>
 
 <div class="so_community" data-sitename="nanitestsite2"></div>
-<script src="//embed.solidopinion.com/so_wl.js" async="async" data-auto-start="true" ></script>
 <noscript>Please enable JavaScript to view the <a href="http://solidopinion.com/">comments powered by SolidOpinion.</a></noscript>
 
 <span class="so_rating" data-sitename="nanitestsite2" data-thread_url="[THREAD_URL]"></span>
-<script src="//embed.solidopinion.com/so_wl.js" async="async" data-auto-start="true" ></script>
 <noscript>Please enable JavaScript to view the <a href="http://solidopinion.com/">comments powered by SolidOpinion.</a></noscript>
 
 
