--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <div>
- <div class="so_promo_headline" data-sitename="nanitestsite2", data-language="en" >
+ <div class="so_promo_headline" data-sitename="nanitestsite2" data-language="en" >
 </div>
 <script src="//embed.solidopinion.com/so_wl.js" async="async" data-auto-start="true" data-ph-submit-auto-position="true" data-ph-submit-auto-size="true"></script>
 <noscript>Please enable JavaScript to view the <a href="http://solidopinion.com/">comments powered by SolidOpinion.</a></noscript>
