--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
  <div class="so_promo_headline" data-sitename="nanitestsite2" data-language="en" ></div>
 <script src="//embed.solidopinion.com/so_wl.js" async="async" data-auto-start="true" data-ph-submit-auto-position="true" data-ph-submit-auto-size="true"></script>
 <noscript>Please enable JavaScript to view the <a href="http://solidopinion.com/">comments powered by SolidOpinion.</a></noscript>
-</div>	
 
 <div class="so_comments" data-sitename="nanitestsite2" data-language="en"></div>
 <noscript>Please enable JavaScript to view the <a href="http://solidopinion.com/">comments powered by SolidOpinion.</a></noscript>
@@ -22,7 +21,25 @@
 <span class="so_rating" data-sitename="nanitestsite2" data-thread_url="[THREAD_URL]" data-language="en"></span>
 <noscript>Please enable JavaScript to view the <a href="http://solidopinion.com/">comments powered by SolidOpinion.</a></noscript>
 
-
+<script>
+    $SO.setConfig({
+        sitename: 'nanida',
+        autoStart: true,
+        customUrlsConfig: {
+          apiUrl: '//discussion-master-api.sod.solidopinion.com',
+          embedUrl: '//discussion-master-embed.sod.solidopinion.com/',
+          backendUrl: '//discussion-master-my.sod.solidopinion.com/',
+          frontendUrl: '//discussion-master-api.sod.solidopinion.com/',
+          siteUrl: '///',
+          moderationUrl: '//api-moderation.solidopinion.com/',
+          cdnUrl: '//discussion-master-sopublic.sod.solidopinion.com/',
+          socketUrl: '//tcd.solidopinion.com/',
+          stats: '//stats.solidopinion.com/',
+          adsUrl: 'https://ads-gw-pr-2.sod.solidopinion.com'
+        }
+    })
+</script>
+</div>	
 
 </body>
 </html>
