--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <script>
     $SO.setConfig({
-        sitename: 'nanida',
+        sitename: 'nanitestsite2',
         autoStart: true,
         customUrlsConfig: {
           apiUrl: '//discussion-master-api.sod.solidopinion.com',
