--- a/site.html
+++ b/site.html
@@ -52,7 +52,7 @@
 <script src='//discussion-master-embed.sod.solidopinion.com/so_wl.js'></script>
 <script>
     $SO.setConfig({
-        sitename: 'nanida',
+        sitename: 'nanimaster',
         autoStart: true,
         customUrlsConfig: {
           apiUrl: '//discussion-master-api.sod.solidopinion.com',
