--- a/autotests_integration_prod.html
+++ b/autotests_integration_prod.html
@@ -8,22 +8,22 @@
 <body>
 
 <div>
- <div class="so_promo_headline" data-sitename="nanitestsite2" data-language="en" ></div>
+ <div class="so_promo_headline" data-sitename="autotestsintegrationprod" data-language="en" ></div>
 <script src="//embed.solidopinion.com/so_wl.js" async="async" data-auto-start="true" data-ph-submit-auto-position="true" data-ph-submit-auto-size="true"></script>
 <noscript>Please enable JavaScript to view the <a href="http://solidopinion.com/">comments powered by SolidOpinion.</a></noscript>
 
-<div class="so_comments" data-sitename="nanitestsite2" data-language="en"></div>
+<div class="so_comments" data-sitename="autotestsintegrationprod" data-language="en"></div>
 <noscript>Please enable JavaScript to view the <a href="http://solidopinion.com/">comments powered by SolidOpinion.</a></noscript>
 
-<div class="so_community" data-sitename="nanitestsite2" data-language="en"></div>
+<div class="so_community" data-sitename="autotestsintegrationprod" data-language="en"></div>
 <noscript>Please enable JavaScript to view the <a href="http://solidopinion.com/">comments powered by SolidOpinion.</a></noscript>
 
-<span class="so_rating" data-sitename="nanitestsite2" data-thread_url="[THREAD_URL]" data-language="en"></span>
+<span class="so_rating" data-sitename="autotestsintegrationprod" data-thread_url="[THREAD_URL]" data-language="en"></span>
 <noscript>Please enable JavaScript to view the <a href="http://solidopinion.com/">comments powered by SolidOpinion.</a></noscript>
 
 <script>
     $SO.setConfig({
-        sitename: 'nanitestsite2',
+        sitename: 'autotestsintegrationprod',
         autoStart: true,
         customUrlsConfig: {
           apiUrl: '//discussion-master-api.sod.solidopinion.com',
